# notion_rss

./: .gitignore  main.py  pyproject.toml  rss-notion.py  workflow.py
