[project]
name = "notion-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.12",
    "google-genai>=2.10.0",
    "notion-client>=3.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
